; ModuleID = '/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_draw.c_CG_DrawLowerLeft.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_draw.c_CG_DrawLowerLeft.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.TYPE_4__ = type { i32 }

@ICON_SIZE = common dso_local global float 0.000000e+00, align 4
@cgs = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@GT_TEAM = common dso_local global i64 0, align 8
@cg_drawTeamOverlay = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@qfalse = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @CG_DrawLowerLeft to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CG_DrawLowerLeft() #0 {
  %1 = alloca float, align 4
  %2 = load float, float* @ICON_SIZE, align 4
  %3 = fsub float 4.800000e+02, %2
  store float %3, float* %1, align 4
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cgs, i32 0, i32 0), align 8
  %5 = load i64, i64* @GT_TEAM, align 8
  %6 = icmp sge i64 %4, %5
  br i1 %6, label %7, label %15

7:                                                ; preds = %0
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @cg_drawTeamOverlay, i32 0, i32 0), align 4
  %9 = icmp eq i32 %8, 3
  br i1 %9, label %10, label %15

10:                                               ; preds = %7
  %11 = load float, float* %1, align 4
  %12 = load i32, i32* @qfalse, align 4
  %13 = load i32, i32* @qfalse, align 4
  %14 = call float @CG_DrawTeamOverlay(float %11, i32 %12, i32 %13)
  store float %14, float* %1, align 4
  br label %15

15:                                               ; preds = %10, %7, %0
  %16 = load float, float* %1, align 4
  %17 = call i32 @CG_DrawPickupItem(float %16)
  ret void
}

declare dso_local float @CG_DrawTeamOverlay(float, i32, i32) #1

declare dso_local i32 @CG_DrawPickupItem(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
